...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/jumlah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_nama" />

        <TextView
            android:id="@+id/textview_form_jatuh_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
...
            android:layout_marginTop="16dp"
            android:text="@string/keterangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_form_jatuh_tempo" />

        <TextView
            android:id="@+id/textview_form_hapus_jatuh_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
...
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_form_jatuh_tempo" />

        <EditText
            android:id="@+id/edittext_form_keterangan"
            android:drawableLeft="@drawable/ic_comment_24dp"
            android:drawablePadding="8dp"
            android:hint="@string/opsional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
...

            <RadioButton
                android:id="@+id/radiobutton_form_dipinjam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/dipinjam"
                android:clickable="true"
                android:textColorHighlight="#3E0F4D"
                android:textColorLink="#3E0F4D"
                android:textCursorDrawable="@color/colorPrimaryDark" />

            <RadioButton
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tombol_hapus"
            android:backgroundTint="@color/colorRedDark"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/button_form_perbaruhi"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup_form_utang" />

        <Button
            android:id="@+id/button_form_perbaruhi"
...
