...
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/detail_button_cicil_title"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_detail_message"
            app:layout_constraintEnd_toStartOf="@+id/button_detail_mark_as_done"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_detail_edit"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_jatuh_tempo" />

        <Button
            android:id="@+id/button_detail_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
